--- a/css/styles.css
+++ b/css/styles.css
@@ -1337,7 +1337,7 @@ body {
 
 /* -------------------- MENU 3 -------------------- */
 .menu3 {
-    background: url('https://i.imgur.com/w1aPR8G.jpg');
+    background: url('https://fondosanimados.com/wp-content/uploads/2023/04/espacio-1.jpg');
     background-size: cover;
     background-position: center;
     min-height: 100vh;
